# quick-sort-ocaml

./: README.md  dune-project  quick_sort.opam
lib/: dune  quick_sort.ml
test/: dune  quick_sort_test.ml
