(lang dune 3.9)

(name quick_sort)

(generate_opam_files true)

(source
 (github PavelRorecek/quick-sort-ocaml))

(authors "Pavel Rorecek")

(maintainers "Pavel Rorecek")

(package
 (name quick_sort)
 (synopsis "Quick Sort")
 (description "Quick Sort")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
